<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.wolfpackit.appdev12.wiggle.WiggleFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/wiggleThresholdSliderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wiggleCustomisationThreshold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wiggleCustomisationLabel" />

    <SeekBar
        android:id="@+id/wiggleThresholdSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/wiggleThresholdSliderLabel"
        app:layout_constraintTop_toBottomOf="@+id/wiggleCustomisationLabel" />

    <TextView
        android:id="@+id/wiggleRunningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wiggleCountLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wiggleCustomisationCount"
        app:layout_constraintEnd_toEndOf="@+id/wiggleThresholdSliderLabel"
        app:layout_constraintStart_toStartOf="@+id/wiggleThresholdSliderLabel"
        app:layout_constraintTop_toBottomOf="@+id/wiggleThresholdSliderLabel" />

    <TextView
        android:id="@+id/wiggleCustomisationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/wiggleCustomisationText"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wiggleRunningText" />

    <Spinner
        android:id="@+id/wiggleCountSpinner"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/wiggleThresholdSlider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/wiggleThresholdSlider"
        app:layout_constraintTop_toBottomOf="@+id/wiggleThresholdSlider" />

    <Spinner
        android:id="@+id/wiggleTimeSpinner"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/wiggleThresholdSlider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/wiggleThresholdSlider"
        app:layout_constraintTop_toBottomOf="@+id/wiggleCountSpinner" />

    <TextView
        android:id="@+id/WiggleTimeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wiggleCustomisationTime"
        app:layout_constraintEnd_toEndOf="@+id/wiggleThresholdSliderLabel"
        app:layout_constraintStart_toStartOf="@+id/wiggleThresholdSliderLabel"
        app:layout_constraintTop_toBottomOf="@+id/wiggleCountLabel" />

</android.support.constraint.ConstraintLayout>
